--- a/generalized_algorithm/experiments.ipynb
+++ b/generalized_algorithm/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,10 +66,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[p1^2 + p2^2 - p3]\n",
+      "2*p1*v1 + 2*p2*v2 - v3\n",
+      "[p1^2 + p2^2 - p3, p1*p2*v2 - 1/2*p1*v3 - p2^2*v1 + p3*v1, p1*v1 + p2*v2 - 1/2*v3, p2^2*v1^2 + p2^2*v2^2 - p2*v2*v3 - p3*v1^2 + 1/4*v3^2]\n",
+      "2*p1*v1 + 2*p2*v2 - v3 True\n",
+      "[p1^2 + p2^2 - p3, p1*p2*v2 - 1/2*p1*v3 - p2^2*v1 + p3*v1, p1*v1 + p2*v2 - 1/2*v3, p2^2*v1^2 + p2^2*v2^2 - p2*v2*v3 - p3*v1^2 + 1/4*v3^2, p3*l + 1/2*v1^2 + 1/2*v2^2 + 1/4*l + 1/4]\n",
+      "4*p3*l + 2*v1^2 + 2*v2^2 + l + 1 True\n",
+      "[p1^2 + p2^2 - p3, p1*p2*v2 - 1/2*p1*v3 - p2^2*v1 + p3*v1, p1*p2*v3*l^2 - 1/8*p1*p2*dl - 1/8*p1*v2*v3*dl - 1/8*p2*v1*v3*dl - 1/2*v1*v2*v3*l - 1/16*v1*v2*dl, p1*v1 + p2*v2 - 1/2*v3, p1*v2^2*dl - 4*p1*v3*l^2 + 1/2*p1*dl - p2*v1*v2*dl + 1/2*v1*v3*dl, p2^2*v1^2 + p2^2*v2^2 - p2*v2*v3 - p3*v1^2 + 1/4*v3^2, p2^2*v3*l^2 - 1/8*p2^2*dl - 1/4*p2*v2*v3*dl + 1/2*v1^2*v3*l - 1/16*v2^2*dl + 1/16*v3^2*dl + 1/4*v3*l^2 - 1/32*dl, p3*l + 1/2*v1^2 + 1/2*v2^2 + 1/4*l + 1/4, p3*dl + 2*v3*l + 1/4*dl, v1^2*dl + v2^2*dl - 4*v3*l^2 + 1/2*dl]\n",
+      "4*p3*dl + 8*v3*l + dl False\n"
+     ]
+    }
+   ],
+   "source": [
+    "R = PolynomialRing(QQ, 'p1, p2, p3, v1, v2, v3, l, dl', order='lex')\n",
+    "S = PolynomialRing(QQ, 'p1, p2, p3, v1, v2, v3, l', order='lex')\n",
+    "\n",
+    "pi = [R('v1'), \n",
+    "      R('v2'), \n",
+    "      R('v3'), \n",
+    "      R('2*l*p1'), \n",
+    "      R('2*l*p2'),\n",
+    "      R('- l - 1'),\n",
+    "      R('dl'),\n",
+    "      R('0')\n",
+    "]\n",
+    "qi = R('p1^2 + p2^2 - p3')\n",
+    "\n",
+    "res = general_algorithm(qi, pi, S)"
+   ]
   },
   {
    "cell_type": "code",
