--- a/generalized_algorithm/experiments.ipynb
+++ b/generalized_algorithm/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -40,18 +40,18 @@
      "text": [
       "[x^2 + y^2 - 1]\n",
       "2*x*u + 2*y*v\n",
-      "[y^2*u - x*y*v - u, x^2 + y^2 - 1, x*u + y*v]\n",
+      "[x^2 + y^2 - 1, x*y*v - y^2*u + u, x*u + y*v, y^2*u^2 + y^2*v^2 - u^2]\n",
       "2*x*u + 2*y*v True\n",
-      "[x*y^2 - x*y*l + u*v, y^3 - y^2*l + v^2 - y + l, y^2*u - x*y*v - u, y*u*v - x*v^2 + x*y - x*l, x^2 + y^2 - 1, x*u + y*v, u^2 + v^2 - y + l]\n",
-      "2*u^2 + 2*v^2 - 2*y + 2*l True\n",
-      "[x*y^2 - x*y*l + 1/3*u*dl, y^3 - y^2*l + 1/9*dl^2 - y + l, y^2*u - 1/3*x*y*dl - u, y*u*dl - 1/3*x*dl^2 + 3*x*y - 3*x*l, x^2 + y^2 - 1, x*u + 1/3*y*dl, u^2 + 1/9*dl^2 - y + l, v - 1/3*dl]\n",
+      "[x^2 + u^4 + 2*u^2*v^2 + 2*u^2*l + v^4 + 2*v^2*l + l^2 - 1, x*u + u^2*v + v^3 + v*l, x*v^3 + x*v*l - u^5 - 3*u^3*v^2 - 2*u^3*l - 2*u*v^4 - 3*u*v^2*l - u*l^2 + u, y - u^2 - v^2 - l, u^6 + 3*u^4*v^2 + 2*u^4*l + 3*u^2*v^4 + 4*u^2*v^2*l + u^2*l^2 - u^2 + v^6 + 2*v^4*l + v^2*l^2]\n",
+      "-2*y + 2*u^2 + 2*v^2 + 2*l True\n",
+      "[x^2 + u^4 + 2*u^2*l + 2/9*u^2*dl^2 + l^2 + 2/9*l*dl^2 + 1/81*dl^4 - 1, x*u + 1/3*u^2*dl + 1/3*l*dl + 1/27*dl^3, x*l*dl + 1/9*x*dl^3 - 3*u^5 - 6*u^3*l - u^3*dl^2 - 3*u*l^2 - u*l*dl^2 - 2/27*u*dl^4 + 3*u, y - u^2 - l - 1/9*dl^2, u^6 + 2*u^4*l + 1/3*u^4*dl^2 + u^2*l^2 + 4/9*u^2*l*dl^2 + 1/27*u^2*dl^4 - u^2 + 1/9*l^2*dl^2 + 2/81*l*dl^4 + 1/729*dl^6, v - 1/3*dl]\n",
       "-6*v + 2*dl False\n"
      ]
     }
    ],
    "source": [
-    "R = PolynomialRing(QQ, 'x, y, u, v, l, dl', order='degrevlex')\n",
-    "S = PolynomialRing(QQ, 'x, y, u, v, l', order='degrevlex')\n",
+    "R = PolynomialRing(QQ, 'x, y, u, v, l, dl', order='lex')\n",
+    "S = PolynomialRing(QQ, 'x, y, u, v, l', order='lex')\n",
     "pi = [R('u'), \n",
     "      R('v'), \n",
     "      R('l*x'), \n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
