--- a/signatures/experiments.ipynb
+++ b/signatures/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -13,15 +13,10 @@
      ]
     },
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `GF` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `GF` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/GitHub/pendulum/signatures/experiments.ipynb:6"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fpMPolyRingElem[x3, x4, x1, x2 + 16*x6, x1^2 + 2*x1*x6]\n"
      ]
     }
    ],
@@ -32,9 +27,27 @@
     "using AlgebraicSolving\n",
     "\n",
     "R, (x1, x2, x3, x4, x5) = polynomial_ring(GF(17), [\"x$i\" for i in 1:5])\n",
-    "F = [x3, x4, x1, x2-1, 0*x1]\n",
+    "F = [x3, x4, x1, x2-1, x1^2+2*x1]\n",
     "F_hom = AlgebraicSolving._homogenize(F)\n",
-    "sol = sig_groebner_basis(F_hom)"
+    "println(F_hom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple{Tuple{Int64, fpMPolyRingElem}, fpMPolyRingElem}[((1, 1), x3), ((2, 1), x4), ((3, 1), x1), ((4, 1), x2 + 16*x6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = sig_groebner_basis(F_hom)\n",
+    "println(sol)"
    ]
   },
   {
