add sanity check

--- a/generalized_algorithm/experiments_multi_q.ipynb
+++ b/generalized_algorithm/experiments_multi_q.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,6 +82,43 @@
     "res = algorithm(qi, pi, R, S)\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = PolynomialRing(QQ, 'dl1, dl2, x1, y1, u1, v1, x2, y2, u2, v2, l1, l2', \n",
+    "                       order='lex')\n",
+    "S = PolynomialRing(QQ, 'x1, y1, u1, v1, x2, y2, u2, v2, l1, l2', \n",
+    "                       order='lex')\n",
+    "pi = [\n",
+    "    R('dl1'),\n",
+    "    R('dl2'),\n",
+    "    R('u1'),\n",
+    "    R('v1'),\n",
+    "    R('- l1*x1 - l2*(x1 - x2)'),\n",
+    "    R('- l1*y1 - l2*(y1 - y2) - 1'),\n",
+    "    R('u2'),\n",
+    "    R('v2'),\n",
+    "    R('- l2*(x2 - x1)'),\n",
+    "    R('- l2*(y2 - y1) - 1'),\n",
+    "    R('0'),\n",
+    "    R('0')\n",
+    "    ]\n",
+    "\n",
+    "qi = [R('x1^2 + y1^2 - 1'), R('(x2 - x1)^2 + (y2 - y1)^2 - 1')]\n",
+    "\n",
+    "res = algorithm(qi, pi, R, S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
