try to develop new algorithm

--- a/julia/as_bug.ipynb
+++ b/julia/as_bug.ipynb
@@ -2,16 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/signatures2`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/signatures2/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/signatures2/Manifest.toml`\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Pkg\n",
+    "Pkg.activate(\"/Users/linussommer/signatures2\")\n",
+    "Pkg.add(\"AlgebraicSolving\")\n",
+    "\n",
+    "using AlgebraicSolving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Legend for f4 information\n",
+      "--------------------------------------------------------\n",
+      "deg       current degree of pairs selected in this round\n",
+      "sel       number of pairs selected in this round\n",
+      "pairs     total number of pairs in pair list\n",
+      "mat       matrix dimensions (# rows x # columns)\n",
+      "density   density of the matrix\n",
+      "new data  # new elements for basis in this round\n",
+      "          # zero reductions during linear algebra\n",
+      "time(rd)  time of the current f4 round in seconds given\n",
+      "          for real and cpu time\n",
+      "--------------------------------------------------------\n",
+      "\n",
+      "deg     sel   pairs        mat          density            new data         time(rd) in sec (real|cpu)\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "reduce final basis        1 x 1         100.00%        1 new       0 zero         0.00 | 0.00         \n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "---------------- TIMINGS ---------------\n",
+      "overall(elapsed)        0.01 sec\n",
+      "overall(cpu)            0.00 sec\n",
+      "select                  0.00 sec   0.0%\n",
+      "symbolic prep.          0.00 sec   0.0%\n",
+      "update                  0.01 sec  83.8%\n",
+      "convert                 0.00 sec   0.6%\n",
+      "linear algebra          0.00 sec  12.5%\n",
+      "reduce gb               0.00 sec   0.0%\n",
+      "-----------------------------------------\n",
+      "\n",
+      "---------- COMPUTATIONAL DATA -----------\n",
+      "size of basis                     1\n",
+      "#terms in basis                   1\n",
+      "#pairs reduced                    0\n",
+      "#GM criterion                     1\n",
+      "#redundant elements               1\n",
+      "#rows reduced                     1\n",
+      "#zero reductions                  0\n",
+      "max. matrix data                  1 x 1 (100.000%)\n",
+      "max. symbolic hash table size  2^11\n",
+      "max. basis hash table size     2^16\n",
+      "-----------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------- INPUT DATA ---------------\n",
+      "#variables                       2\n",
+      "#equations                       2\n",
+      "#invalid equations               0\n",
+      "field characteristic            17\n",
+      "homogeneous input?               1\n",
+      "signature-based computation      0\n",
+      "monomial order                 DRL\n",
+      "basis hash table resetting     OFF\n",
+      "linear algebra option            2\n",
+      "initial hash table size     131072 (2^17)\n",
+      "max pair selection             ALL\n",
+      "reduce gb                        1\n",
+      "#threads                         1\n",
+      "info level                       2\n",
+      "generate pbm files               0\n",
+      "------------------------------------------\n",
+      "\n",
+      "---------------- TIMINGS ---------------\n",
+      "overall(elapsed)        0.01 sec\n",
+      "overall(cpu)            0.00 sec\n",
+      "select                  0.00 sec   0.0%\n",
+      "symbolic prep.          0.00 sec   0.0%\n",
+      "update                  0.00 sec   0.0%\n",
+      "convert                 0.00 sec   0.0%\n",
+      "linear algebra          0.00 sec   0.0%\n",
+      "reduce gb               0.00 sec   0.0%\n",
+      "-----------------------------------------\n",
+      "\n",
+      "---------- COMPUTATIONAL DATA -----------\n",
+      "size of basis                     1\n",
+      "#terms in basis                   1\n",
+      "#pairs reduced                    0\n",
+      "#GM criterion                     0\n",
+      "#redundant elements               0\n",
+      "#rows reduced                     0\n",
+      "#zero reductions                  0\n",
+      "max. matrix data                  0 x 0 (0.000%)\n",
+      "max. symbolic hash table size  2^-2147483648\n",
+      "max. basis hash table size     2^16\n",
+      "-----------------------------------------\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{FqMPolyRingElem}:\n",
+       " 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "R, (x1, x2) = polynomial_ring(GF(17), [\"x1\", \"x2\"])\n",
+    "I = Ideal([x1, R(2)])\n",
+    "groebner_basis(I, info_level=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Pkg\n",
-    "Pkg.activate(\"/Users/linussommer/signatures\")\n",
-    "using AlgebraicSolving\n",
-    "\n",
     "R, (x1, x2) = polynomial_ring(GF(17), [\"x1\", \"x2\"])\n",
-    "I = Ideal([x1, x2, R(0)])   \n",
+    "I = Ideal([x1, R(0)])\n",
     "groebner_basis(I, info_level=2)"
    ]
   },
