--- a/generalized_algorithm/exp_04_06.ipynb
+++ b/generalized_algorithm/exp_04_06.ipynb
@@ -2,61 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sage.all import QQ, PolynomialRing, ideal\n",
     "\n",
-    "R = PolynomialRing(QQ, 'x', 3, order='degrevlex')\n",
-    "S = PolynomialRing(QQ, 'x', 2, order='degrevlex')\n",
-    "I = ideal(R('x0^2'), R('x0*x1+x1'))\n",
-    "J = ideal(S('x0^2'), S('x0*x1+x1'))"
+    "def delta(f, derivatives, subring, ring):\n",
+    "    vars = subring.gens()\n",
+    "    # This is \\partial on the subring\n",
+    "    if set(f.variables()).issubset(vars):\n",
+    "        return sum([derivatives[i] * f.derivative(ring(var)) for i, var in enumerate(vars)])\n",
+    "    # and zero on the rest.\n",
+    "    else: \n",
+    "        return ring(0)\n",
+    "    \n",
+    "    \n",
+    "def gen_alg(q, derivatives, S, R):\n",
+    "    I = ideal(q)\n",
+    "    dI = I + ideal([delta(q, derivatives, S, R) for q in I.gens()])\n",
+    "    while dI != I:\n",
+    "        I = dI\n",
+    "        dI = I + ideal([delta(q, derivatives, S, R) for q in I.gens()])\n",
+    "    return I.groebner_basis()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = PolynomialRing(QQ, 'x, y, u, v, l, dl', order='invlex')\n",
+    "S = PolynomialRing(QQ, 'x, y, u, v, l', order='invlex')\n",
+    "derivatives = [R('u'), R('v'), R('l*x'), R('l*y - 1'), R('dl')]\n",
+    "q = R('x^2 + y^2 - 1')\n",
+    "\n",
+    "G = gen_alg(q, derivatives, S, R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(x0, x1, x2)\n",
-      "(x0, x1)\n",
-      "True\n"
+      "[dl - 3*v, l + v^2 + u^2 - y, y*v + x*u, x^2*v - v - x*y*u, y^2 + x^2 - 1]\n"
      ]
-    }
-   ],
-   "source": [
-    "def sub2ring(f): return f.parent().gens()\n",
-    "\n",
-    "gensI = sub2ring(I.gens()[1])\n",
-    "gensJ = sub2ring(J.gens()[1])\n",
-    "print(gensI)\n",
-    "print(gensJ)\n",
-    "print(set(gensJ).issubset(gensI))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "False"
+       "5"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b in a"
+    "print(G)\n",
+    "len(G)"
    ]
   },
   {
