ideal based poc

--- a/julia/as_bug.ipynb
+++ b/julia/as_bug.ipynb
@@ -18,10 +18,7 @@
    ],
    "source": [
     "using Pkg\n",
-    "Pkg.activate(\"/Users/linussommer/signatures2\")\n",
-    "Pkg.add(\"AlgebraicSolving\")\n",
-    "\n",
-    "using AlgebraicSolving"
+    "Pkg.activate(\"/Users/linussommer/signatures2\")"
    ]
   },
   {
@@ -147,13 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "using Pkg\n",
+    "Pkg.activate(\"/Users/linussommer/signatures2\")\n",
+    "using AlgebraicSolving\n",
     "R, (x1, x2) = polynomial_ring(GF(17), [\"x1\", \"x2\"])\n",
     "I = Ideal([x1, R(0)])\n",
-    "groebner_basis(I, info_level=2)"
+    "groebner_basis(I, info_level=1)"
    ]
   },
   {
