--- a/generalized_algorithm/exp_04_06.ipynb
+++ b/generalized_algorithm/exp_04_06.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "\n",
     "def intersect(J, S):\n",
     "    vars = S.gens()\n",
-    "    J = J.groebner_basis() # TODO is this necessary? y?\n",
+    "    J = J.groebner_basis() # TODO is this necessary? y? - empirically it does not seem to be so?\n",
     "    J_S = []\n",
     "    for f in J:\n",
     "        if set(f.variables()).issubset(vars):\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
