add gradient descent

--- a/generalized_algorithm/generalized_algorithm.ipynb
+++ b/generalized_algorithm/generalized_algorithm.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sage.all import QQ, PolynomialRing, ideal\n",
+    "from sage.all import QQ, PolynomialRing, ideal, GF\n",
     "\n",
     "def partial(f, derivatives, S, R):\n",
     "    vars = S.gens()\n",
     "    return sum([derivatives[i] * f.derivative(R(var)) for i, var in enumerate(vars)])\n",
     "\n",
     "def intersect(J, R, S):\n",
+    "    \n",
     "    vars = S.gens()\n",
     "    J = J.groebner_basis()\n",
     "    J_S = []\n",
@@ -22,10 +23,15 @@
     "    return ideal(R, J_S)\n",
     "\n",
     "def gen_alg(I, derivatives, S, R):\n",
+    "    i = 1\n",
+    "    print(f\"i = {i}\")\n",
+    "    \n",
     "    J1 = ideal(I)\n",
     "    J_S = intersect(J1, R, S)\n",
     "    J2 = J1 + ideal([partial(f, derivatives, S, R) for f in J_S.gens()])\n",
     "    while J1 != J2:\n",
+    "        i += 1\n",
+    "        print(f\"i = {i}\")\n",
     "        J1 = J2\n",
     "        J_S = intersect(J1, R, S)\n",
     "        J2 = J1 + ideal([partial(f, derivatives, S, R) for f in J_S.gens()])\n",
@@ -34,13 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
       "dl - 3*v\n",
       "l + v^2 + u^2 - y\n",
       "y*v + x*u\n",
@@ -50,8 +60,8 @@
     }
    ],
    "source": [
-    "R = PolynomialRing(QQ, 'x, y, u, v, l, dl', order='invlex')\n",
-    "S = PolynomialRing(QQ, 'x, y, u, v, l', order='invlex')\n",
+    "R = PolynomialRing(GF(101), 'x, y, u, v, l, dl', order='invlex')\n",
+    "S = PolynomialRing(GF(101), 'x, y, u, v, l', order='invlex')\n",
     "derivatives = [R('u'), R('v'), R('l*x'), R('l*y - 1'), R('dl')]\n",
     "q = R('x^2 + y^2 - 1')\n",
     "J = gen_alg(q, derivatives, S, R)\n",
@@ -62,25 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v2^2*dl + v1^2*dl + 1/2*dl - 8*p2*v2*l^2 - 8*p1*v1*l^2\n",
-      "p2^2*dl + p1^2*dl + 1/4*dl + 4*p2*v2*l + 4*p1*v1*l\n",
-      "p2^2*l + p1^2*l + 1/4*l + 1/2*v2^2 + 1/2*v1^2 + 1/4\n",
-      "v3 - 2*p2*v2 - 2*p1*v1\n",
-      "p3 - p2^2 - p1^2\n"
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "4*v2^2*dl + 4*v1^2*dl + 2*dl - 32*p2*v2*l^2 - 32*p1*v1*l^2\n",
+      "4*p2^2*dl + 4*p1^2*dl + dl + 16*p2*v2*l + 16*p1*v1*l\n",
+      "4*p2^2*l + 4*p1^2*l + l + 2*v2^2 + 2*v1^2 + 1\n",
+      "4*v3 - 8*p2*v2 - 8*p1*v1\n",
+      "4*p3 - 4*p2^2 - 4*p1^2\n"
      ]
     }
    ],
@@ -92,7 +99,7 @@
     "J = gen_alg(q, derivatives, S, R)\n",
     "G = J.groebner_basis()\n",
     "for g in G:\n",
-    "    print(g)"
+    "    print(4*g)"
    ]
   },
   {
@@ -152,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
